# adp-sync

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  pyproject.toml.tmpl
.devcontainer/scripts/: postCreate.sh
.github/scripts/: envsubst.sh
.github/workflows/: post-create.yaml
.pdm/scripts/: adp-test.sh  convert-cer.sh  generate-csr.sh
.trunk/: trunk.yaml
src/adp-sync/: adp.py  extract.py  workers_update.py
src/adp_sync/: email.py  extract.py  wfm_extract.py  workers_update.py  workers_update.sh
